--- a/client/static/textwall.css
+++ b/client/static/textwall.css
@@ -620,6 +620,10 @@ td {
   font-family: cutive mono;
   src: url(fonts/CutiveMono-Regular.ttf);
 }
+@font-face {
+  font-family: twemoji;
+  src: url(https://github.com/Sav22999/emoji/raw/master/font/twemoji.ttf);
+}
 
 .buttons {
   display: flex;
