🚔🐴 Checkpoint ./client/static/textwall.js:51974198/106:64461440/4 ./.glitch-assets:51974198/336 ./client/static/textwall.css:51974198/167

--- a/client/static/textwall.css
+++ b/client/static/textwall.css
@@ -622,7 +622,7 @@ td {
 }
 @font-face {
   font-family: twemoji;
-  src: url(https://github.com/Sav22999/emoji/raw/master/font/twemoji.ttf);
+  src: url(https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/twemoji.ttf);
 }
 
 .buttons {
