--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -187,7 +187,7 @@ input {
 #closeteleport:active {
   transform: scale(0.9);
 }
-#colourlist {
+#colorlist {
   transition: none;
   overflow: auto;
   -ms-overflow-style: none;
@@ -195,11 +195,11 @@ input {
   background-color: rgba(255, 255, 255, 0.35);
   border-radius: 5px;
 }
-#colourlist::-webkit-scrollbar,
+#colorlist::-webkit-scrollbar,
 #optionsmenu::-webkit-scrollbar {
   display: none;
 }
-.colour {
+.color {
   width: 30px;
   height: 30px;
   margin: 3px;
@@ -207,7 +207,7 @@ input {
   box-sizing: border-box;
   transition: all 50ms;
 }
-.colour.selected {
+.color.selected {
   border: 3px solid #ffffff;
 }
 #zoom {
