👩‍👩‍👦🚔 Checkpoint ./public/static/textwall.js:51974198/1064 ./public/index.html:51974198/50302 ./public/static/textwall.css:51974198/18

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -320,7 +320,7 @@ td {
   margin-bottom: 10px;
   font-weight: 700;
 }
-#closeteleport {
+#closeteleport, #closeshortcut {
   position: absolute;
   transition: all 0.1s;
   top: 5px;
