--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -161,6 +161,23 @@ h3 {
   color: #00b7ff;
   cursor: pointer;
 }
+#sidemenu {
+    display: none;
+    background-color: var(--surface-background);
+    color: white;
+    padding: 5px;
+    border-radius: 0 5px 5px 0;
+    pointer-events: auto;
+    width: 270px;
+    max-height: 540px;
+    justify-content: space-between;
+}
+.no-select, .button, .tool, .bubble {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 #optionsmenu {
     display: flex
 ;
@@ -171,6 +188,33 @@ h3 {
 #settingstabs {
     flex-shrink: 0;
     margin-bottom: 5px;
+}
+.tab.active {
+    color: white;
+    border-bottom: 3px solid white;
+}
+.tab {
+    display: flex
+;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    color: #858585;
+    font-size: 20px;
+    text-align: center;
+    text-wrap: nowrap;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+.panels {
+    display: flex
+;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    margin-top: 5px;
 }
 input {
   vertical-align: middle;
@@ -423,14 +467,15 @@ td {
     background-color: #d44b4b;
 }
 #chatbox {
-  background-color: #ffffff;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  width: 100%;
-  height: 100%;
-  font-size: 13px;
-  word-wrap: break-word;
-  overflow: auto;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    word-wrap: break-word;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 #chatbox p {
   margin: 5px;
