--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -109,23 +109,12 @@ h3 {
 .decoration.enabled > img {
   filter: opacity(1);
 }
-#usermenu {
-  background-color: rgba(30, 30, 30, 0.8);
-  color: #ffffff;
-  position: absolute;
-  padding: 5px;
-  margin-top: 10px;
-  border-radius: 0 5px 5px 0;
-  transform: translateX(-105%);
-  pointer-events: auto;
-  transition: all 0.5s;
-  display: flex;
-  width: 250px;
-  height: 540px;
-  max-height: 70vh;
-  justify-content: space-between;
-  -webkit-user-select: none;
-  user-select: none;
+#optionsmenu {
+    display: flex
+;
+    flex-direction: column;
+    flex: 1;
+    width: 0;
 }
 #admin,
 #wallsettings {
@@ -1649,7 +1638,7 @@ td {
     width: 100%;
     height: unset;
   }
-  #usermenu {
+  #optionsmenu {
     margin-top: 60px;
   }
 }
