Rewound to commit e6e4510784147966934f5e83c61c295e0e4653d1 + 0 edits

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -109,12 +109,23 @@ h3 {
 .decoration.enabled > img {
   filter: opacity(1);
 }
-#optionsmenu {
-    display: flex
-;
-    flex-direction: column;
-    flex: 1;
-    width: 0;
+#usermenu {
+  background-color: rgba(30, 30, 30, 0.8);
+  color: #ffffff;
+  position: absolute;
+  padding: 5px;
+  margin-top: 10px;
+  border-radius: 0 5px 5px 0;
+  transform: translateX(-105%);
+  pointer-events: auto;
+  transition: all 0.5s;
+  display: flex;
+  width: 250px;
+  height: 540px;
+  max-height: 70vh;
+  justify-content: space-between;
+  -webkit-user-select: none;
+  user-select: none;
 }
 #admin,
 #wallsettings {
@@ -150,60 +161,13 @@ h3 {
   color: #00b7ff;
   cursor: pointer;
 }
-#sidemenu {
-    display: none;
-    background-color: var(--surface-background);
-    color: white;
-    padding: 5px;
-    border-radius: 0 5px 5px 0;
-    pointer-events: auto;
-    width: 270px;
-    max-height: 540px;
-    justify-content: space-between;
-}
-.no-select, .button, .tool, .bubble {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
 #optionsmenu {
-    display: flex
-;
-    flex-direction: column;
-    flex: 1;
-    width: 0;
-}
-#settingstabs {
-    flex-shrink: 0;
-    margin-bottom: 5px;
-}
-.tab.active {
-    color: white;
-    border-bottom: 3px solid white;
-}
-.tab {
-    display: flex
-;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-    color: #858585;
-    font-size: 20px;
-    text-align: center;
-    text-wrap: nowrap;
-    padding: 5px 10px;
-    cursor: pointer;
-    font-weight: bold;
-}
-.panels {
-    display: flex
-;
-    overflow: auto;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    margin-top: 5px;
+  width: 100%;
+  overflow: auto;
+  -ms-overflow-style: none;
+  overflow-wrap: break-word;
+  scrollbar-width: none;
+  max-height: 526px;
 }
 input {
   vertical-align: middle;
@@ -214,17 +178,10 @@ input {
   flex-direction: column;
 }
 #closemenu {
-    display: flex
-;
-    cursor: pointer;
-    justify-content: center;
-    width: 15px;
-    height: 100%;
-    align-items: center;
-    background-color: #969696cc;
-    border-radius: 5px;
-    margin-left: 5px;
-    transition: all 0.1s;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4px;
+  transition: all 0.1s;
 }
 #closemenu:active,
 #closeteleport:active,
@@ -433,45 +390,27 @@ td {
   transform: translateX(0px);
 }
 .chatcontainer {
-    border-radius: 0 0 0 5px;
-    height: 100%;
-    gap: 7px;
-    display: flex
-;
-    flex-direction: column;
-    pointer-events: auto;
+  width: 250px;
+  background-color: rgba(30, 30, 30, 0.8);
+  border-radius: 0 0 0 5px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  pointer-events: auto;
 }
 .msgcontainer {
   display: flex;
   justify-content: stretch;
 }
-#chataction > #walllist > span > a {
-    display: inline-flex
-;
-    align-items: center;
-    color: #FFFFFF;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.1s;
-}
-#chatvisit {
-    background-color: #000000;
-}
-#chatblock {
-    background-color: #d44b4b;
-}
 #chatbox {
-    color: black;
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    font-size: 13px;
-    word-wrap: break-word;
-    overflow-x: hidden;
-    overflow-y: auto;
+  background-color: #ffffff;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 100%;
+  font-size: 13px;
+  word-wrap: break-word;
+  overflow: auto;
 }
 #chatbox p {
   margin: 5px;
@@ -1645,7 +1584,7 @@ td {
     width: 100%;
     height: unset;
   }
-  #optionsmenu {
+  #usermenu {
     margin-top: 60px;
   }
 }
