--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -392,25 +392,27 @@ td {
 .chatcontainer {
   width: 250px;
   background-color: rgba(30, 30, 30, 0.8);
-  border-radius: 0 0 0 5px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  pointer-events: auto;
+	border-radius: 0 0 0 5px;
+	height: 100%;
+	gap: 7px;
+	display: flex;
+	flex-direction: column;
+	pointer-events: auto;
 }
 .msgcontainer {
   display: flex;
   justify-content: stretch;
 }
 #chatbox {
-  background-color: #ffffff;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  width: 100%;
-  height: 100%;
-  font-size: 13px;
-  word-wrap: break-word;
-  overflow: auto;
+	color: black;
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 5px;
+	width: 100%;
+	height: 100%;
+	font-size: 13px;
+	word-wrap: break-word;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 #chatbox p {
   margin: 5px;
