--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -5,7 +5,7 @@ body {
   position: static;
 }
 * {
-  font-family: JetBrains Mono, monospace, courier new, Courier, special;
+  font-family: Victor Mono, monospace, courier new, Courier, special;
   -webkit-tap-highlight-color: transparent;
 }
 .emoji {
