--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -193,8 +193,16 @@ input {
   overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  background-color: rgba(255, 255, 255, 0.35);
-  border-radius: 5px;
+  background-color: rgba(32, 32, 32, 0.35);
+  border-radius: 0 0 5px 5px;
+}
+#colourtabs {
+  transition: none;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  background-color: rgba(32, 32, 32, 0.35);
+  border-radius: 5px 5px 0 0;
 }
 #colourlist::-webkit-scrollbar,
 #optionsmenu::-webkit-scrollbar {
