--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -6013,7 +6013,56 @@ td {
   src: url(https://fonts.gstatic.com/s/nanumgothiccoding/v26/8QIYdjzHisX_8vv59_xMxtPFW4IXROws8xgeQsJ28w.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+.tools {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	overflow-x: auto;
+	gap: 5px;
+}
 
+.separator {
+	flex-shrink: 0;
+	background-color: #777777;
+	width: 2px;
+	height: 24px;
+	margin: 5px;
+    border-radius: 2px;
+}
+
+.tools > div:nth-last-child(1 of :not(.hidden)).separator {
+	display: none;
+}
+
+.tool {
+	height: 24px;
+	padding: 5px;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.1s;
+}
+
+.tool.disabled, .bubble.disabled {
+	cursor: not-allowed;
+}
+.tool.disabled > img, .bubble.disabled > img {
+	filter: brightness(0.6);
+}
+
+@media (hover: hover) {
+	.tool:hover, .bubble.clickable:hover {
+		background-color: #636363cc;
+	}
+}
+
+.tool:not(.disabled):active, .bubble.clickable:not(.disabled):active {
+	background-color: #bdbdbdcc;
+}
+
+.tool.enabled, .bubble.enabled {
+	background-color: #969696cc;
+	filter: drop-shadow(0px 0px 2px #969696cc);
+}
 .small-scrollbar::-webkit-scrollbar {
 	width: 5px;
 	height: 5px;
