🚙🌃 Checkpoint ./public/static/textwall.js:65718371/67 ./public/static/textwall.css:65718371/89

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -250,8 +250,7 @@ td {
   align-items: center;
 }
 
-.infobtn > img,
-.button {
+.infobtn > img {
   -webkit-user-drag: none;
   -khtml-user-drag: none;
   -moz-user-drag: none;
