💷🕍 Checkpoint ./public/static/textwall.css:65718371/12 ./public/static/textwall.js:65718371/612

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -6022,7 +6022,7 @@ td {
 
 .separator {
 	flex-shrink: 0;
-	background-color: #777777;
+	background-color: #ffffff;
 	width: 2px;
 	height: 24px;
 	margin: 5px;
