--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -213,7 +213,35 @@ input {
 	flex-grow: 1;
 	width: 0;
 	background-color: #ffffff33;
-	border-radius: 5px;
+	border-radius: 0 0 5px 5px;
+}
+#colourtabs {
+	flex-shrink: 0;
+	margin-bottom: 5px;
+}
+.colourtab {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex: 1;
+	color: #858585;
+	font-size: 20px;
+	text-align: center;
+	text-wrap: nowrap;
+	padding: 5px 10px;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+@media (hover: hover) {
+	.colourtab:hover {
+		background-color: #393939cc;
+	}
+}
+
+.colourtab.active {
+	color: white;
+	border-bottom: 3px solid white;
 }
 .colour {
 	min-width: 30px;
