--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -69,7 +69,7 @@ h3 {
 }
 #info {
   background-color: rgba(30, 30, 30, 0.8);
-  width: 400px;
+  width: 720px;
   color: #ffffff;
   padding: 5px 0;
   font-size: 18px;
@@ -205,7 +205,14 @@ input {
 .colours {
 	display: flex;
 }
-
+.colourlist {
+	display: flex;
+	overflow: auto;
+	width: 100%;
+	height: 100%;
+	max-height: 100%;
+	margin-top: 5px;
+}
 #colourlist {
 	display: flex;
 	overflow-x: auto;
@@ -219,16 +226,25 @@ input {
 	flex-shrink: 0;
 	margin-bottom: 5px;
 }
+.tabs {
+	display: flex;
+	overflow-y: auto;
+	scrollbar-width: none;
+}
+
+.tabs::-webkit-scrollbar {
+	display: none;
+}
 .colourtab {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex: 1;
 	color: #858585;
-	font-size: 20px;
+	font-size: 15px;
 	text-align: center;
 	text-wrap: nowrap;
-	padding: 5px 10px;
+	padding: 5px 5px;
 	cursor: pointer;
 	font-weight: bold;
 }
