🚡📫 Checkpoint ./public/static/textwall.css:65718371/14

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -69,7 +69,7 @@ h3 {
 }
 #info {
   background-color: rgba(30, 30, 30, 0.8);
-  width: 720px;
+  width: 50%;
   color: #ffffff;
   padding: 5px 0;
   font-size: 18px;
