✋🚓 Checkpoint ./public/static/textwall.js:65718371/4280 ./public/static/textwall.css:65718371/745 ./public/index.html:65718371/391

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -215,6 +215,7 @@ input {
 }
 #colourlist {
 	display: flex;
+  flex-direction: column;
 	overflow-x: auto;
 	overflow-y: hidden;
 	flex-grow: 1;
@@ -222,9 +223,9 @@ input {
 	background-color: #ffffff33;
 	border-radius: 0 0 5px 5px;
 }
-#colourtabs {
-	flex-shrink: 0;
-	margin-bottom: 5px;
+.colourtext {
+  font-size: 25px;
+  color: #ffffff;
 }
 .tabs {
 	display: flex;
@@ -234,30 +235,6 @@ input {
 
 .tabs::-webkit-scrollbar {
 	display: none;
-}
-.colourtab {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex: 1;
-	color: #858585;
-	font-size: 15px;
-	text-align: center;
-	text-wrap: nowrap;
-	padding: 5px 5px;
-	cursor: pointer;
-	font-weight: bold;
-}
-
-@media (hover: hover) {
-	.colourtab:hover {
-		background-color: #393939cc;
-	}
-}
-
-.colourtab.active {
-	color: white;
-	border-bottom: 3px solid white;
 }
 .colour {
 	min-width: 30px;
