--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -168,16 +168,27 @@ input {
   display: flex;
   flex-direction: column;
 }
-#closemenu {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 4px;
-  transition: all 0.1s;
+#closemenu{
+	display:flex;
+	cursor: pointer;
+	justify-content: center;
+	width: 15px;
+  	height: 100%;
+	align-items: center;
+	background-color: #969696cc;
+	border-radius: 5px;
+	margin-left: 5px;
+	transition: background-color 0.1s;
 }
-#closemenu:active,
-#closeteleport:active,
-#closeshortcut:active {
-  transform: scale(0.9);
+
+@media (hover: hover) {
+	#closemenu:hover, #sendmsg:hover {
+		background-color: #a1a1a1cc;
+	}
+}
+
+#closemenu:active, #closeteleport:active, #sendmsg:active {
+	background-color: #b9b9b9cc;
 }
 .toolbar-container {
 	max-width: 100%;
