--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -117,7 +117,7 @@ h3 {
   transition: all 0.5s;
   display: flex;
   width: 250px;
-  height: 540px;
+  height: 54%;
   max-height: 70vh;
   justify-content: space-between;
   -webkit-user-select: none;
@@ -472,15 +472,6 @@ td {
   width: 20px;
   padding: 5px;
   margin: 5px 0 0 5px;
-}
-#chatbutton {
-  background-color: rgba(30, 30, 30, 0.8);
-  border-radius: 0 0 0 5px;
-  padding: 10px;
-  margin-bottom: 24px;
-  pointer-events: auto;
-  position: relative;
-  cursor: pointer;
 }
 #unread {
   width: 10px;
