😻🏜 Checkpoint ./public/static/textwall.css:71769930/194 ./public/static/textwall.js:71769930/8

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -517,7 +517,7 @@ td {
 }
 @font-face {
   font-family: special;
-  src: url(https://cdn.glitch.global/32dadb8b-db6a-421e-8c38-70fd74a12607/special.ttf?v=1746102482410);
+  src: url(https://cdn.glitch.global/8a4d4824-c580-4631-ab70-07c416eefeae/install.com%2Fspecial.ttf?v=1747372493270);
   }
 /* lucida sans mono */
 @font-face {
