🚊🚈 Checkpoint ./public/static/textwall.css:71769930/639 ./public/static/textwall.js:65718371/26561:71769930/5776 ./.glitch-assets:71769930/411

--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -771,7 +771,7 @@ td {
 }
 @font-face {
   font-family: "fairfax2 special";
-  src: url(https://cdn.glitch.global/8a4d4824-c580-4631-ab70-07c416eefeae/public%2Fstatic%2FFairfaxSpecial.ttf?v=1747652622400)
+  src: url(https://cdn.glitch.global/8a4d4824-c580-4631-ab70-07c416eefeae/Fairfax2Special.ttf?v=1747654073138)
 }
 /* iosevka */
 @font-face {
