--- a/public/static/textwall.css
+++ b/public/static/textwall.css
@@ -423,16 +423,16 @@ td {
   top: 0;
   right: 0;
   display: flex;
-  height: 350px;
+  height: 50%;
   transition: all 0.5s;
   pointer-events: none;
-  transform: translateX(270px);
+  transform: translateX(350px);
 }
 #chat.open {
   transform: translateX(0px);
 }
 .chatcontainer {
-  width: 250px;
+  width: 350px;
 	border-radius: 0 0 0 5px;
 	height: 100%;
 	gap: 7px;
@@ -446,7 +446,7 @@ td {
 }
 #chatbox {
 	color: black;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(230, 210, 255, 1);
 	border-radius: 5px;
 	width: 100%;
 	height: 100%;
@@ -462,7 +462,7 @@ td {
   border-radius: 5px;
   border: none;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(210, 210, 255, 1);
   user-select: none;
 }
 #sendmsg {
